--- a/my-commons/pom.xml
+++ b/my-commons/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>lombok</artifactId>
             <version>1.16.22</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.28</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 
