--- a/order/pom.xml
+++ b/order/pom.xml
@@ -43,7 +43,7 @@
     </dependencyManagement>
 
     <modules>
-        <module>server</module>
+        <module>order-server</module>
         <module>order-common</module>
     </modules>
 
