--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone : http://localhost:8761/eureka
+      defaultZone : http://116.196.118.178:8761/eureka
 server:
   port: 8082
 
