--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,6 +13,11 @@ eureka:
   client:
     service-url:
       defaultZone : http://116.196.118.178:8761/eureka
+
+  instance:
+    prefer-ip-address: true
 server:
   port: 8082
+
+
 
