--- a/order/order-server/src/main/resources/bootstrap.yml
+++ b/order/order-server/src/main/resources/bootstrap.yml
@@ -8,3 +8,8 @@ spring:
         service-id: config-server
       profile: dev
 
+eureka:
+  client:
+    service-url:
+      defaultZone : http://116.196.118.178:8761/eureka/
+
