--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,9 +13,10 @@ eureka:
   client:
     service-url:
       defaultZone : http://116.196.118.178:8761/eureka
-
   instance:
     prefer-ip-address: true
+    ip-address: 116.196.118.178
+    non-secure-port: 8761
 server:
   port: 8082
 
