--- a/my-commons/pom.xml
+++ b/my-commons/pom.xml
@@ -20,6 +20,11 @@
             <version>1.7.28</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.49</version>
+        </dependency>
     </dependencies>
 
 
