用户服务、zuul权限、zuul跨域等配置

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -21,6 +21,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>link.yangxin</groupId>
             <artifactId>my-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
