--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -7,6 +7,10 @@ spring:
         enabled: true
         service-id: config-server
       profile: dev
+  redis:
+    port: 6379
+    host: 116.196.118.178
+
 
 eureka:
   client:
@@ -23,9 +27,13 @@ zuul:
     product: /myProduct2/**
   ignored-patterns:
     - /**/product/listForProductId
-
+  sensitive-headers:
 
 
 management:
   security:
     enabled: false
+
+
+server:
+  port: 9000
