--- a/user/user-server/src/main/resources/bootstrap.yml
+++ b/user/user-server/src/main/resources/bootstrap.yml
@@ -1,24 +1,20 @@
 spring:
   application:
-    name: product
+    name: user
   cloud:
     config:
       discovery:
-        enabled: true
         service-id: config-server
-
+        enabled: true
       profile: dev
-  rabbitmq:
+  redis:
+    port: 6379
     host: 116.196.118.178
-    username: guest
-    password: guest
-    port: 5672
-
-
 eureka:
   client:
     service-url:
       defaultZone : http://116.196.118.178:8761/eureka/
 
 server:
-  port: 8080
+  port: 8084
+
