--- a/order/order-server/src/main/resources/bootstrap.yml
+++ b/order/order-server/src/main/resources/bootstrap.yml
@@ -20,6 +20,14 @@ spring:
   redis:
     host: 116.196.118.178
     port: 6379
+  zipkin:
+    base-url: http://116.196.118.178:9411/
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      percentage: 1
+
 
 eureka:
   client:
@@ -47,3 +55,7 @@ feign:
 
 management:
   context-path: /
+
+logging:
+  level:
+    org.springframework.cloud.netflix.feign: debug
