--- a/order/pom.xml
+++ b/order/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.M3</version>
+        <version>2.0.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.M2</spring-cloud.version>
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <order-common.version>1.0-SNAPSHOT</order-common.version>
         <product-api.version>1.0-SNAPSHOT</product-api.version>
     </properties>
@@ -34,11 +34,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
+        <!--    <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>2.0.0.M3</version>
-            </dependency>
+            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
@@ -47,7 +47,7 @@
         <module>order-common</module>
     </modules>
 
-    <repositories>
+    <!--<repositories>
         <repository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
@@ -84,6 +84,6 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-
+-->
 
 </project>
