--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -2,7 +2,7 @@ FROM hub.c.163.com/library/java:8-alpine
 
 MAINTAINER yangxin
 
-ADD /order/order-server/target/*.jar order.jar
+ADD /order-server/target/*.jar order.jar
 
 EXPOSE 8080
 
