--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,6 +2,8 @@ FROM hub.c.163.com/library/java:8-alpine
 
 MAINTAINER yangxinxin
 
+CMD ["build.sh"]
+
 ADD /target/*.jar client-test.jar
 
 EXPOSE 8080
