--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -15,7 +15,10 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone : http://127.0.0.1:8761/eureka/
+      defaultZone : http://eureka1:8761/eureka/,http://eureka2:8762/eureka/
+
+  instance:
+    prefer-ip-address: true
 
 
 zuul:
