--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone : http://127.0.0.1:8761/eureka
+      defaultZone : http://eureka1:8761/eureka,http://eureka1:8762/eureka
   instance:
     prefer-ip-address: true
     #ip-address: 116.196.118.178
