--- a/product/product-server/src/main/resources/bootstrap.yml
+++ b/product/product-server/src/main/resources/bootstrap.yml
@@ -13,13 +13,12 @@ spring:
     username: guest
     password: guest
     port: 5672
-
-
 eureka:
   client:
     service-url:
-      defaultZone : http://127.0.0.1:8761/eureka/
-
+      defaultZone : http://eureka1:8761/eureka/,http://eureka2:8762/eureka/
+  instance:
+    prefer-ip-address: true
 server:
   port: 8080
 
