--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,11 +1,3 @@
 spring:
-  application:
-    name: eureka
-eureka:
-  client:
-    service-url:
-      defaultZone : http://localhost:8761/eureka
-    fetch-registry: false
-
-server:
-  port: 8761
+  profiles:
+    active: eureka1
