--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@ FROM hub.c.163.com/library/java:8-alpine
 
 MAINTAINER yangxinxin
 
-RUN ["/bin/bash","mvn","clean","package","install","-Dmaven.test.skip=true"]
+RUN ["/bin/bash","-c","mvn clean package install -Dmaven.test.skip=true"]
 
 ADD /target/*.jar client-test.jar
 
